# AI-Job-Agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_add_candidate_profile_resume_and_preferences.py  0003_add_job_preference_exclusion_fields.py  0004_add_job_interactions.py  0005_add_telegram_notifications.py  0006_add_pipeline_ai_packs.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  applications.py  auth.py  dashboard.py  health.py  jobs.py  profile.py  resume.py  telegram.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: adzuna.py  llm.py  telegram.py
backend/app/models/: __init__.py  ai_score_cache.py  application_pack.py  candidate_profile.py  job_interaction.py  job_notification.py  job_preference.py  resume_document.py  user.py
backend/app/schemas/: analytics.py  application.py  auth.py  health.py  job.py  profile.py  resume.py  telegram.py
backend/app/services/: ai_scoring.py  application_pack_service.py  outcome_intelligence.py  profile_service.py  resume_service.py  scheduler.py  strategy_service.py  telegram_service.py
backend/tests/: conftest.py  test_adzuna.py  test_auth.py  test_demo_auth.py  test_health.py  test_jobs.py  test_llm.py  test_phases.py  test_pipeline_flow.py  test_profile.py  test_profile_extraction.py  test_resume.py  test_session.py  test_telegram.py  test_telegram_checks.py
(+69 files in other folders)
